test/error/04_bad_do_label.f
      PROGRAM ERRLBL
      INTEGER I
      DO 10 I = 1, 5
         PRINT *, I
   20 CONTINUE
      END
